# brand

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html
.claude/agents/: brand-audit.md  brand-pipeline-runner.md  brand-scout.md
.claude/skills/: brand-evaluate.md  brand-generate.md  brand-pipeline-designer.md  brand-research.md
.claude/skills/brand-name-report/: SKILL.md
.github/workflows/: ci.yml
_modules/: index.html
_modules/brand/: _generators.html  base.html  pipeline.html  registry.html  stages.html  util.html
_modules/brand/_scorers/: availability.html  company.html  composite.html  linguistic.html  llm.html  phonetic.html  visual.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: brand.rst.txt
_sources/module_docs/brand/: _generators.rst.txt  _scorers.rst.txt  base.rst.txt  config.rst.txt  misc.rst.txt  pipeline.rst.txt  registry.rst.txt  search_names.rst.txt  stages.rst.txt  templates.rst.txt  util.rst.txt
_sources/module_docs/brand/_scorers/: availability.rst.txt  company.rst.txt  composite.rst.txt  linguistic.rst.txt  llm.rst.txt  phonetic.rst.txt  visual.rst.txt
brand/: __init__.py  _generators.py  base.py  config.py  misc.py  pipeline.py  registry.py  stages.py  util.py
brand/_scorers/: __init__.py  availability.py  company.py  composite.py  linguistic.py  llm.py  phonetic.py  visual.py
brand/templates/: __init__.py  ai_ml_product.json  consultancy.json  consumer_global.json  developer_tool.json  full_audit.json  open_source.json  python_package.json  quick_screen.json  research_company.json  tech_startup.json  youtube_channel.json
docsrc/: index.rst
examples/: run_research_pipeline.py
misc/: .gitignore  a_few_lists.md  available_cvcvcv_fixed_consonant.txt  available_cvcvcvs.txt  available_vcvcvc_fixed_consonant.txt  available_vcvcvc_fixed_vowel.txt  brand_demo.ipynb  brand_wip.ipynb
misc/docs/: brand_naming_deep_research.md  brand_naming_skill_prompt.md  claude_code_prompt.md
module_docs/: brand.html
module_docs/brand/: _generators.html  _scorers.html  base.html  config.html  misc.html  pipeline.html  registry.html  search_names.html  stages.html  templates.html  util.html
module_docs/brand/_scorers/: availability.html  company.html  composite.html  linguistic.html  llm.html  phonetic.html  visual.html
tests/: test_pipeline.py
