[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "brand"
version = "0.1.0"
description = "A composable pipeline for brand name generation, evaluation, and availability checking"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Thor Whalen"},
]
keywords = ["brand", "naming", "domain", "availability", "pipeline", "phonetics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Internet :: Name Service (DNS)",
]

dependencies = [
    "dol",
    "config2py",
    "argh",
    "requests",
    "lexis",
    "python-whois",
    "timeout-decorator",
    "wordfreq",
    "pronouncing",
]

[project.optional-dependencies]
phonetics = [
    "epitran",
    "panphon",
    "python-BLICK",
]
all = [
    "epitran",
    "panphon",
    "python-BLICK",
    "oa",
]

[project.urls]
Homepage = "https://github.com/thorwhalen/brand"
Repository = "https://github.com/thorwhalen/brand"

[tool.setuptools.packages.find]
include = ["brand*"]

[tool.setuptools.package-data]
"brand.templates" = ["*.json"]
